--- a/package.json
+++ b/package.json
@@ -9,23 +9,25 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
-    "core-js": "^3.8.3",
+    "core-js": "^3.29.1",
+    "firebase": "^9.18.0",
+    "firebase-tools": "^11.25.1",
     "query-string": "^8.1.0",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.58.3",
-    "sass-loader": "^13.2.0"
+    "@babel/core": "^7.21.3",
+    "@babel/eslint-parser": "^7.21.3",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "eslint": "^8.36.0",
+    "eslint-plugin-vue": "^9.10.0",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.1"
   }
 }
